--- a/programming/python/agent/hf-smolagents/pyproject.toml
+++ b/programming/python/agent/hf-smolagents/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "smolagents>=1.5.0",
+    "certifi>=2024.12.14",
+    "helium>=5.1.0",
+    "python-dotenv>=1.0.1",
+    "selenium>=4.28.1",
+    "smolagents[all]>=1.5.0",
     "transformers>=4.48.1",
 ]
